# vtio

crates/vtansi/src/: registry.rs
crates/vtansi/src/derive/: mod.rs
crates/vtansi_derive/src/: lib.rs
crates/vtansi_derive/src/helpers/: debug.rs  default_variant.rs  metadata.rs  mod.rs  struct_params.rs  type_props.rs
crates/vtansi_derive/src/macros/: ansi_control.rs  from_ansi.rs  param_decoder.rs
crates/vtio/: Cargo.toml
crates/vtio/benches/: parser.rs
crates/vtio/examples/: vtev.rs
crates/vtio/src/event/: charset.rs  clipboard.rs  color.rs  common.rs  cursor.rs  dsr.rs  iterm.rs  mod.rs  mode.rs  screen.rs  scroll.rs  sgr.rs  shell.rs  terminal.rs  window.rs
crates/vtio/src/event/keyboard/: encoding.rs  mod.rs  mode.rs
crates/vtio/src/event/mouse/: encoding.rs  event.rs  mod.rs  mode.rs  track.rs
crates/vtio/src/parser/: common.rs  input.rs  output.rs
crates/vtio/tests/: parser.rs
crates/vtio/tests/common/: mod.rs
crates/xparsecolor/: build.rs
crates/xparsecolor/src/: lib.rs
